give app max-width, cards no longer stretched

--- a/starwars/src/App.css
+++ b/starwars/src/App.css
@@ -8,6 +8,8 @@ body {
 
 .App {
   text-align: center;
+  max-width: 900px;
+  margin: auto;
 }
 .Header {
   color: #443e3e;
